* search: update to es 7.16.0, high level rest client is deprecated, migrated to elasticsearch java client